# wifi-network-manager

./: .env.example  CHANGELOG.md  DELIVERY_SUMMARY.md  LICENSE  README.md  TESTING_REPORT.md  app.py  config.py  database.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .env  Dockerfile  README.md  pytest.ini  requirements.txt  run_tests.py
backend/src/: main.py
backend/tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_vouchers.py
docs/: README.md  deployment-guide.md  index.md
docs/api/: authentication.md  endpoints.md  examples.md  introduction.md
docs/architecture/: data-flow.md  database-schema.md  overview.md  system-components.md
docs/configuration/: basic-config.md  environment-variables.md  router-setup.md  security-settings.md
docs/installation/: advanced-setup.md  database-setup.md  quick-start.md  requirements.md
docs/troubleshooting/: common-issues.md  diagnostic-tools.md  error-logs.md  performance-tips.md
docs/user-guide/: dashboard.md  getting-started.md  network-control.md  network-management.md  user-management.md  voucher-management.md
frontend/: .env  Dockerfile  README.md  index.html  nginx.conf  package.json
frontend/src/: App.jsx
models/: __init__.py  network.py  router.py  user.py  voucher.py
routes/: admin.py  auth.py  network_control.py  networks.py  vouchers.py
templates/: 404.html  base.html  captive_portal.html  dashboard.html  login.html  network_control.html  networks.html  users.html  vouchers.html
utils/: auth.py  network_manager.py  qr_generator.py  router_manager.py
(+22 files in other folders)
